Compiler/src/main/java/Testing/Tests/SyntacticTests/passing/ImplStructStart.ru
/? Descripción: caso de prueba que se fija si se acepta el archivo con impl struct y start
/? en ese orden
/? Salida esperada:
/? CORRECTO: ANALISIS SINTACTICO
impl HolaYeu {.(){}}
struct EstasLeyendoEsto {}
start {}