Compiler/src/main/java/Testing/Tests/SyntacticTests/failing/emptyImpl.ru
/? Descripción: caso de prueba que se fija si se acepta un impl vacio
/? Salida esperada:
/? ERROR: SINTÁCTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 6 | COLUMNA 26 | Se esperaba: fn o st o . y llegó: }
impl HolaQuienSeaQueSos {}
struct EstasLeyendoEsto {}
start {}